--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</section>
 		
 		<section class='main-inf'>
-			    <img src='komp.png'  width='400' height='231.36'>
+			    <img src='img/komp.png'  width='400' height='231.36'>
 				<div>
 					<h1>Дизайн и верстка</h1>
 					<p>	Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
@@ -61,7 +61,7 @@
 				<p>Adobe Photoshop
 				<p><progress min="1" max="5" value='4'></progress>
 			</div>
-			<img src='man.png' width='555' title='me' alt='my photo'>
+			<img src='img/man.png' width='555' title='me' alt='my photo'>
 		</div>
 	</section>
 	
@@ -71,7 +71,7 @@
 			<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
 			Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
 		</div>	
-		<video width='1110' height='600' controls poster='video.jpg'></video>
+		<video width='1110' height='600' controls poster='img/video.jpg'></video>
 	</section>
 	
 	<section class='projects'>
@@ -86,10 +86,10 @@
 		<a class='second' href='#'></a>
 			
 		<div class='clients'>
-			<a href='#'><img src='client.jpg'></a>
-			<a href='#'><img src='client.jpg'></a>
-			<a href='#'><img src='client.jpg'></a>
-			<a href='#'><img src='client.jpg'></a>
+			<a href='#'><img src='img/client.jpg'></a>
+			<a href='#'><img src='img/client.jpg'></a>
+			<a href='#'><img src='img/client.jpg'></a>
+			<a href='#'><img src='img/client.jpg'></a>
 	</section>
 	
 	<section class='order'>
